--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -72,6 +72,9 @@ h1, h2, h3, h4, h5, h6{
   margin-left: 5px;
   margin-right: 5px;
 }
+.gap{
+  gap: 5px;
+}
 /*fluent components*/
 fluent-menu{
   position: absolute;
