Added search options dialog
More search options, new interface of search panel

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -84,6 +84,9 @@ fluent-menu{
 fluent-tab-panel{
   padding: 0;
 }
+fluent-dialog{
+  --dialog-height: 380px
+}
 /*default classes*/
 .top-nav{
   width: 100vw;
