Visual break changes
Changed app structures, new fluent settings menu, redesigned top nav. Cleanup needed.

--- a/resources/css/cssRules.css
+++ b/resources/css/cssRules.css
@@ -41,6 +41,8 @@
 .flex-row-reverse{ flex-direction: row-reverse;}
 .flex-col{ flex-direction: column;}
 .flex-col-reverse{ flex-direction: column-reverse;}
+/*flex-wrap*/
+.flex-nowrap{flex-wrap: nowrap;}
 /*justify-content*/
 .justify-start { justify-content: flex-start; }
 .justify-center { justify-content: center; }
