--- a/resources/css/cssRules.css
+++ b/resources/css/cssRules.css
@@ -42,6 +42,7 @@
 .flex-col{ flex-direction: column;}
 .flex-col-reverse{ flex-direction: column-reverse;}
 /*flex-wrap*/
+.flex-wrap{ flex-wrap: wrap;}
 .flex-nowrap{flex-wrap: nowrap;}
 /*justify-content*/
 .justify-start { justify-content: flex-start; }
