Small code changes

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -175,6 +175,7 @@ fluent-dialog fluent-tab-panel{
 }
 .fileNavItem, .fileNavGroupItem{
   margin: 5px 0;
+  padding: 0;
 }
 .fileNavItem .fileNavItemIcon-span{
   max-width: 20px;
