Update appwith new icons
Replace old Fabric MDL2 Icons with new from Fluent System UI.

--- a/resources/css/fluentFont.css
+++ b/resources/css/fluentFont.css
@@ -5,3 +5,8 @@
     font-style: normal;
     font-display: swap;
 }
+
+[class^="fluent-icons-"], [class*=" fluent-icons-"]{
+  margin: auto 0;
+  display: inline-block;
+}
